Update docker-compose.yml 2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     restart: unless-stopped
     volumes:
       #- $PWD/logs:/opt/thehivehook_go_package/logs:rw
-      - /var/log:/opt/thehivehook_go_package/logs:rw
+      - /var/log/thehivehook_go_package:/opt/thehivehook_go_package/logs:rw
       - $PWD/config:/opt/thehivehook_go_package/config:rw
       #для корректного отображения даты с учетом временной зоны
       - /etc/timezone:/etc/timezone:ro
