--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,10 @@ services:
       #для корректного отображения даты с учетом временной зоны
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+    network_mode: host
     ports:
       - "15151:5151"
 
-networks:
-  host:
-    external: true
+#networks:
+#  host:
+#    external: true
