--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,13 @@ services:
       #для корректного отображения даты с учетом временной зоны
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
-    network_mode: host
+    #network_mode: host
+    networks:
+      hivehook-net:
     ports:
       - "15151:5151"
 
-#networks:
-#  host:
-#    external: true
+networks:
+  hivehook-net:
+    external: true
+    name: host
