--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,11 @@ services:
     #network_mode: host
     networks:
       hivehook-net:
+        ipv4-address: 0.0.0.0
     ports:
       - "15151:5151"
 
 networks:
   hivehook-net:
+    driver: host
     external: true
