--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,12 @@ services:
       #для корректного отображения даты с учетом временной зоны
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
-    network_mode: host
+    networks:
+      - host
     ports:
       - "15151:5151"
 
 networks:
-  hivehook-net:
-    driver: bridge
+  host:
+    external: true
 
