--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,11 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     networks:
-      - host
+      - hivehook
     ports:
       - "15151:5151"
 
 networks:
-  host:
+  hivehook:
     external: true
 
