--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     network_mode: "host"
-    ports:
-      - "15151:5151"
+    #ports:
+    #  - "15151:5151"
 
 #networks:
 #  hivehook:
