Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,6 @@ stages:
 default:
   tags:
     - thehivehook_go
-  script:
-    - echo "URL repository $CI_REPOSITORY_URL"
 
 build-job:
   stage: build
@@ -13,6 +11,8 @@ build-job:
     refs:
       - master
       - latest
+  before_script:
+    - echo "URL repository $CI_REPOSITORY_URL"
   script: 
     - pwd
     - docker-compose -f $CI_PROJECT_DIR/docker-compose.yml down 
