--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     volumes:
       #- $PWD/logs:/opt/thehivehook_go_package/logs:rw
       - /var/log/thehivehook_go_package:/opt/thehivehook_go_package/logs:rw
-      - $PWD/config:/opt/thehivehook_go_package/config:rw
+      #- $PWD/config:/opt/thehivehook_go_package/config:rw
+      - ./config:/opt/thehivehook_go_package/config:rw
       #для корректного отображения даты с учетом временной зоны
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
