--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,18 @@ services:
   app:
     container_name: gcm_thehivehook_go_package
     environment:
-      - GO_HIVEHOOK_THAPIKEY=ERHs96mbKEcx0nq8w/Xa+sjnk50ZmoSk
-      - GO_HIVEHOOK_DBWLOGPASSWD=i2J-QYv-jmL-CFs
+      - GO_HIVEHOOK_THAPIKEY=$HIVEHOOK_THAPIKEY
+      - GO_HIVEHOOK_DBWLOGPASSWD=$HIVEHOOK_DBWLOGPASSWD
     image: gitlab.cloud.gcm:5050/a.belyakov/thehivehook_go_package:latest
     restart: unless-stopped
+    # пробрасываем user ID для корректной записи в логов
+    user: root
+    command: chmod 777 /opt/thehivehook_go_package/logs && \
+             chown 1500:1500 /opt/thehivehook_go_package/logs
     volumes:
-      #- $PWD/logs:/opt/thehivehook_go_package/logs:rw
       - /var/log/thehivehook_go_package:/opt/thehivehook_go_package/logs:rw
       - ./config:/opt/thehivehook_go_package/config:rw
       #для корректного отображения даты с учетом временной зоны
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     network_mode: "host"
-
