--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,11 @@ default:
 
 build-job:
   stage: build
-#  rules:
-#    - if: 
+  rules:
+    - if: $CI_COMMIT_REF_NAME == "master"
+      changes:
+        - README.md
+      when: never
 #      refs:
 #      - master
 #      - latest        
@@ -17,8 +20,7 @@ build-job:
 #      - master
 #      - latest
 #  except:
-#    changes:
-#      - README.md
+
   before_script:
     - echo "Current URL repository - $CI_REPOSITORY_URL"
   script: 
