Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ build-job:
       when: never
 #    - if: $CI_COMMIT_BRANCH
     - when: on_success
+      allow_failure: true
   before_script:
     - echo "Current URL repository - $CI_REPOSITORY_URL"
   script: 
