--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,12 +8,13 @@ default:
 build-job:
   stage: build
   rules:
+    - if: $CI_PIPELINE_SOURCE == "trigger"
+      when: on_success
     - if: $CI_COMMIT_BRANCH
       changes:
         - README.md
       when: never
-    - if: $CI_PIPELINE_SOURCE == "trigger"
-      when: on_success
+    - when: on_success
   before_script:
     - echo "Current URL repository - $CI_REPOSITORY_URL"
   script: 
