--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,5 +20,5 @@ build-job:
   script: 
     - pwd
     - docker-compose -f $CI_PROJECT_DIR/docker-compose.yml down 
-    - docker rmi gitlab.cloud.gcm:5050/a.belyakov/thehivehook_go_package
+    - docker rmi gitlab.cloud.gcm:5050/a.belyakov/thehivehook_go_package || true
     - docker-compose -f $CI_PROJECT_DIR/docker-compose.yml up -d --force-recreate --build
