--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ build-job:
     - echo "Current URL repository - $CI_REPOSITORY_URL"
   script: 
     - pwd
+    - docker login -u $CI_REGISTRY_USER -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker-compose -f $CI_PROJECT_DIR/docker-compose.yml down 
     - docker rmi gitlab.cloud.gcm:5050/a.belyakov/thehivehook_go_package || true
     - docker-compose -f $CI_PROJECT_DIR/docker-compose.yml up -d --force-recreate --build
