--- a/config/config.yml
+++ b/config/config.yml
@@ -21,15 +21,15 @@ LOGGING:
       pathDirectory: "logs",
       writingStdout: true,
       maxFileSize: 10000000,
-      writingDB: false,
+      writingDB: true,
     }
   - {
       msgTypeName: "log_to_db",
       writingFile: false,
       pathDirectory: "logs",
-      writingStdout: true,
+      writingStdout: false,
       maxFileSize: 30000000,
-      writingDB: true,
+      writingDB: false,
     }
   - {
       msgTypeName: "log_for_test",
